# sse_to_stdio

./: .gitignore  README.md  coverage.sh  lint.sh  main.py  main.py.upd  pyproject.toml  test.sh
pywrapper/: __init__.py  bridge.py  sse_client.py  stdin_reader.py
tests/: test_bridge.py  test_sse_client.py  test_stdin_reader.py
