[project]
name = "pywrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "anyio>=4.4.0",
    "pytest-cov>=5.0.0",
]
